--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.5
   location: ^4.2.0
   flutter_bloc: ^8.0.0
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
