--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   location: ^4.2.0
   flutter_bloc: ^8.0.0
   carousel_slider: ^4.1.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
