--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   location: ^4.2.0
   provider: ^6.0.5
   recase: ^4.1.0
+  web_socket_channel: ^2.2.0
+  stomp_dart_client: ^0.4.4
 
 dev_dependencies:
   flutter_test:
