--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   web_socket_channel: ^2.2.0
   stomp_dart_client: ^0.4.4
   flutter_launcher_icons: ^0.11.0
+  image_picker: ^0.8.6+1
 
 dev_dependencies:
   flutter_test:
